tablegen/tests/snapshots/snapshot_codegen__expr_grammar_codegen.snap
---
source: tablegen/tests/snapshot_codegen.rs
assertion_line: 873
expression: formatted
---
use adze :: tree_sitter as ts ;
 use crate :: abi :: {
     TSLanguage , TSSymbol , TSStateId , TSLexState , TSParseAction , ExternalScanner
}
 ;
 const TREE_SITTER_LANGUAGE_VERSION : u32 = 15 ;
 const EXTERNAL_TOKEN_COUNT : u32 = 0u32 ;
 static SYMBOL_NAMES : & [& str] = & ["end" , "number" , "+" , "rule_3" , "expression"] ;
 static SYMBOL_NAMES_PTRS : & [* const u8] = & [SYMBOL_NAMES [0usize] . as_ptr () , SYMBOL_NAMES [1usize] . as_ptr () , SYMBOL_NAMES [2usize] . as_ptr () , SYMBOL_NAMES [3usize] . as_ptr () , SYMBOL_NAMES [4usize] . as_ptr ()] ;
 static FIELD_NAMES : & [& str] = & [] ;
 static FIELD_NAMES_PTRS : & [* const u8] = & [] ;
 static SYMBOL_METADATA : & [u8] = & [3u8 , 3u8 , 3u8 , 3u8 , 3u8] ;
 static PARSE_ACTIONS : & [TSParseAction] = & [TSParseAction {
     action_type : 0 , extra : 0 , child_count : 0 , dynamic_precedence : 0 , symbol : TSSymbol (0) ,
}
] ;
 static LEX_MODES : & [TSLexState] = & [TSLexState {
     lex_state : 0u16 , external_lex_state : 0u16 ,
}
 , TSLexState {
     lex_state : 0u16 , external_lex_state : 0u16 ,
}
 , TSLexState {
     lex_state : 0u16 , external_lex_state : 0u16 ,
}
 , TSLexState {
     lex_state : 0u16 , external_lex_state : 0u16 ,
}
 , TSLexState {
     lex_state : 0u16 , external_lex_state : 0u16 ,
}
] ;
 static PARSE_TABLE : & [u16] = & [1u16 , 1u16 , 1u16 , 2u16 , 2u16 , 2u16 , 3u16 , 32769u16 , 1u16 , 1u16 , 3u16 , 2u16 , 2u16 , 32770u16 , 3u16 , 32770u16 , 1u16 , 3u16 , 65535u16] ;
 static SMALL_PARSE_TABLE_MAP : & [u32] = & [0u32 , 3u32 , 8u32 , 11u32 , 16u32] ;
 static FIELD_MAP_SLICES : & [u16] = & [] ;
 static FIELD_MAP_ENTRIES : & [u16] = & [] ;
 static PUBLIC_SYMBOL_MAP : & [TSSymbol] = & [TSSymbol (0usize as u16) , TSSymbol (1usize as u16) , TSSymbol (2usize as u16) , TSSymbol (3usize as u16) , TSSymbol (4usize as u16)] ;
 static PRIMARY_STATE_IDS : & [TSStateId] = & [TSStateId (0usize as u16) , TSStateId (1usize as u16) , TSStateId (2usize as u16) , TSStateId (3usize as u16) , TSStateId (4usize as u16)] ;
 static EXTERNAL_SCANNER : ExternalScanner = ExternalScanner :: default () ;
 static LANGUAGE : TSLanguage = TSLanguage {
     version : 15u32 , symbol_count : 5usize , alias_count : 0 , token_count : 3u32 , external_token_count : EXTERNAL_TOKEN_COUNT , state_count : 5u32 , large_state_count : 0u32 , production_id_count : 2u32 , field_count : 0u32 , max_alias_sequence_length : 0 , parse_table : PARSE_TABLE . as_ptr () , small_parse_table : PARSE_TABLE . as_ptr () . wrapping_add (0u32 as usize * 5usize as usize) , small_parse_table_map : SMALL_PARSE_TABLE_MAP . as_ptr () , parse_actions : PARSE_ACTIONS . as_ptr () , symbol_names : SYMBOL_NAMES_PTRS . as_ptr () , field_names : FIELD_NAMES_PTRS . as_ptr () , field_map_slices : FIELD_MAP_SLICES . as_ptr () , field_map_entries : FIELD_MAP_ENTRIES . as_ptr () , symbol_metadata : SYMBOL_METADATA . as_ptr () , public_symbol_map : PUBLIC_SYMBOL_MAP . as_ptr () , alias_map : std :: ptr :: null () , alias_sequences : std :: ptr :: null () , lex_modes : LEX_MODES . as_ptr () , lex_fn : None , keyword_lex_fn : None , keyword_capture_token : TSSymbol (0u16) , external_scanner : EXTERNAL_SCANNER , primary_state_ids : PRIMARY_STATE_IDS . as_ptr () ,
}
 ;
 # [doc = r" Get the Tree-sitter Language for this grammar"] pub fn language () -> ts :: Language {
     unsafe {
         ts :: Language :: from_raw (& LANGUAGE as * const TSLanguage as * const _)
    }

}
 # [doc = r" Export for C FFI"] # [doc = r" SAFETY: This function is required for Tree-sitter C ABI compatibility"] # [unsafe (no_mangle)] pub extern "C" fn tree_sitter_expr () -> ts :: Language {
     unsafe {
         language ()
    }

}
